--- a/custom-dependencies/pom.xml
+++ b/custom-dependencies/pom.xml
@@ -48,6 +48,11 @@
             <version>2.0.1</version>
             <scope>provided</scope>
         </dependency>
+		<!--<dependency>-->
+			<!--<groupId>mysql</groupId>-->
+			<!--<artifactId>mysql-connector-java</artifactId>-->
+			<!--<scope>runtime</scope>-->
+		<!--</dependency>-->
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid-spring-boot-starter</artifactId>
