--- a/quote-test-2/src/main/resources/application.yml
+++ b/quote-test-2/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   #MySQL
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhostwww:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+      url: jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
       username: root
       password: 123456
       type: com.alibaba.druid.pool.DruidDataSource
@@ -21,7 +21,7 @@ spring:
          test-on-return: false
 
 mybatis:
-  type-aliases-package: com.lz.entity
+  type-aliases-package: com.lz.security.entity
   mapper-locations: /mapper/*.xml
   configuration:
     lazy-loading-enabled: true
