--- a/quote-test-2/src/main/resources/application.yml
+++ b/quote-test-2/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   #MySQL
   datasource:
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+      jdbc-url: jdbc:mysql://10.0.254.112:3306/simulated_control_teaching?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
       username: root
-      password: 123456
+      password: 1qaz2wsx
       type: com.alibaba.druid.pool.DruidDataSource
       druid:
          initial-size: 10
@@ -21,7 +21,7 @@ spring:
          test-on-return: false
 
 mybatis:
-  type-aliases-package: com.lz.security.entity
+  type-aliases-package: com.lz.bean
   mapper-locations: /mapper/*.xml
   configuration:
     lazy-loading-enabled: true
