--- a/custom-dependencies/pom.xml
+++ b/custom-dependencies/pom.xml
@@ -30,14 +30,9 @@
 			<artifactId>spring-boot-starter-security</artifactId>
             <scope>provided</scope>
 		</dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.springframework.boot</groupId>-->
-            <!--<artifactId>spring-boot-starter-jdbc</artifactId>-->
-        <!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
-			<version>5.0.10.RELEASE</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -52,12 +47,6 @@
 			<version>2.10.6</version>
             <scope>compile</scope>
 		</dependency>
-        <!--<dependency>-->
-            <!--<groupId>org.mybatis.spring.boot</groupId>-->
-            <!--<artifactId>mybatis-spring-boot-starter</artifactId>-->
-            <!--<version>2.0.1</version>-->
-            <!--<scope>provided</scope>-->
-        <!--</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
@@ -69,11 +58,11 @@
             <version>1.1.23</version>
             <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <scope>provided</scope>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.apache.commons</groupId>-->
+            <!--<artifactId>commons-lang3</artifactId>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
