--- a/custom-dependencies/src/main/resources/security.properties
+++ b/custom-dependencies/src/main/resources/security.properties
@@ -3,4 +3,4 @@ security.datasource.driver-class-name=com.mysql.jdbc.Driver
 security.datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
 security.datasource.username=root
 security.datasource.password=123456
-datasource.type=com.alibaba.druid.pool.DruidDataSource
+security.datasource.type=com.alibaba.druid.pool.DruidDataSource
