--- a/quote-test-2/src/main/resources/security.properties
+++ b/quote-test-2/src/main/resources/security.properties
@@ -1,6 +1,6 @@
 #MySQL
-datasource.driver-class-name=com.mysql.jdbc.Driver
-datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
-datasource.username=root
-datasource.password=123456
-datasource.type=com.alibaba.druid.pool.DruidDataSource
+security.datasource.driver-class-name=com.mysql.jdbc.Driver
+security.datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+security.datasource.username=root
+security.datasource.password=123456
+security.datasource.type=com.alibaba.druid.pool.DruidDataSource
