--- a/custom-dependencies/pom.xml
+++ b/custom-dependencies/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.0.6.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.lz</groupId>
-	<artifactId>custom-dependencies</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>custom-dependencies</name>
-	<description>Demo project for Spring Boot</description>
+	<groupId>com.youzidata</groupId>
+	<artifactId>authentication-plugin</artifactId>
+	<version>1.0.0.RELEASE</version>
+	<name>authentication-plugin</name>
+	<description>authentication-plugin-dependencies</description>
 
 	<properties>
         <skipTests>true</skipTests>
@@ -41,12 +41,12 @@
 			<version>0.9.0</version>
             <scope>compile</scope>
 		</dependency>
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>2.10.6</version>
-            <scope>compile</scope>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>joda-time</groupId>-->
+			<!--<artifactId>joda-time</artifactId>-->
+			<!--<version>2.10.6</version>-->
+            <!--<scope>compile</scope>-->
+		<!--</dependency>-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
