--- a/quote-test-2/pom.xml
+++ b/quote-test-2/pom.xml
@@ -57,14 +57,30 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.58</version>
         </dependency>
-        
+
         <dependency>
-            <groupId>com.lz</groupId>
-            <artifactId>custom-dependencies</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-            <!--<systemPath>-->
-                <!--D:/Workerspace/IdeaProjects/custom-jar-packages/custom-dependencies/target/custom-dependencies-0.0.1-SNAPSHOT.jar-->
-            <!--</systemPath>-->
+            <groupId>com.youzidata</groupId>
+            <artifactId>authentication-plugin</artifactId>
+            <version>1.0.0.RELEASE</version>
+            <scope>system</scope>
+            <systemPath>${pom.basedir}/lib/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>joda-time</groupId>
+            <artifactId>joda-time</artifactId>
+            <version>2.10.6</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
@@ -94,29 +110,6 @@
                 </executions>
             </plugin>
         </plugins>
-
-        <!--<resources>-->
-            <!--&lt;!&ndash; 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 &ndash;&gt;-->
-            <!--<resource>-->
-                <!--<directory>src/main/java</directory>-->
-                <!--<includes>-->
-                    <!--<include>**/*.yml</include>-->
-                    <!--<include>**/*.properties</include>-->
-                    <!--<include>**/*.xml</include>-->
-                <!--</includes>-->
-                <!--<filtering>false</filtering>-->
-            <!--</resource>-->
-            <!--&lt;!&ndash; 如果没有此节点，src/main/resources目录下的配置文件将被忽略 &ndash;&gt;-->
-            <!--<resource>-->
-                <!--<directory>src/main/resources</directory>-->
-                <!--<includes>-->
-                    <!--<include>**/*.yml</include>-->
-                    <!--<include>**/*.properties</include>-->
-                    <!--<include>**/*.xml</include>-->
-                <!--</includes>-->
-                <!--<filtering>false</filtering>-->
-            <!--</resource>-->
-        <!--</resources>-->
     </build>
 
 </project>
