--- a/quote-test/pom.xml
+++ b/quote-test/pom.xml
@@ -54,10 +54,10 @@
         </dependency>
 
 		<dependency>
-			<groupId>com.lz</groupId>
-			<artifactId>custom-dependencies</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-			<systemPath>D:/Workerspace/IdeaProjects/custom-jar-packages/custom-dependencies/target/custom-dependencies-0.0.1-SNAPSHOT.jar</systemPath>
+			<groupId>com.youzidata</groupId>
+			<artifactId>authentication-plugin</artifactId>
+            <version>1.0.0.RELEASE</version>
+			<systemPath>D:/Workerspace/IdeaProjects/custom-jar-packages/custom-dependencies/target/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
 		</dependency>
 
 		<dependency>
