--- a/quote-test-2/pom.xml
+++ b/quote-test-2/pom.xml
@@ -63,7 +63,8 @@
             <artifactId>authentication-plugin</artifactId>
             <version>1.0.0.RELEASE</version>
             <scope>system</scope>
-            <systemPath>${pom.basedir}/lib/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
+            <!--<systemPath>${pom.basedir}/lib/authentication-plugin-1.0.0.RELEASE.jar</systemPath>-->
+            <systemPath>D:/Workerspace/IdeaProjects/custom-jar-packages/custom-dependencies/target/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
