--- a/quote-test-2/src/main/resources/security.properties
+++ b/quote-test-2/src/main/resources/security.properties
@@ -4,3 +4,5 @@ security.datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezon
 security.datasource.username=root
 security.datasource.password=123456
 security.datasource.type=com.alibaba.druid.pool.DruidDataSource
+security.datasource.website.appid=wx69fc42cd86f184aa
+security.datasource.website.secret=a2c9389e6c59249fe115dbdcd2927ff9
