--- a/quote-test-2/pom.xml
+++ b/quote-test-2/pom.xml
@@ -64,7 +64,7 @@
             <version>1.0.0.RELEASE</version>
             <scope>system</scope>
             <!--<systemPath>${pom.basedir}/lib/authentication-plugin-1.0.0.RELEASE.jar</systemPath>-->
-            <systemPath>D:/Workerspace/IdeaProjects/custom-jar-packages/custom-dependencies/target/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
+            <systemPath>C:/Workspace/security-jarpackage/security-jarpackage/custom-dependencies/target/authentication-plugin-1.0.0.RELEASE.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -83,6 +83,21 @@
             <version>2.10.6</version>
             <scope>compile</scope>
         </dependency>
+
+
+        <!--swagger2-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.springfox/springfox-swagger2 -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
