mybatis自动提交事务

--- a/quote-test-2/src/main/resources/security.properties
+++ b/quote-test-2/src/main/resources/security.properties
@@ -1,9 +1,9 @@
 #MySQL
 security.datasource.driver-class-name=com.mysql.jdbc.Driver
-security.datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
-#security.datasource.url=jdbc:mysql://10.0.254.11:3306/admin_manager?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+#security.datasource.url=jdbc:mysql://localhost:3306/springsecurity?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
+security.datasource.url=jdbc:mysql://10.0.254.11:3306/admin_manager?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
 security.datasource.username=root
 security.datasource.password=123456
-security.datasource.type=com.alibaba.druid.pool.DruidDataSource
+#security.datasource.type=com.alibaba.druid.pool.DruidDataSource
 security.datasource.website.appid=wx69fc42cd86f184aa
 security.datasource.website.secret=a2c9389e6c59249fe115dbdcd2927ff9
