--- a/quote-test-2/src/main/resources/application.yml
+++ b/quote-test-2/src/main/resources/application.yml
@@ -5,20 +5,20 @@ spring:
       url: jdbc:mysql://10.0.254.112:3306/simulated_control_teaching?serverTimezone=GMT%2B8&useUnicode=true&amp&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false&allowMultiQueries=true
       username: root
       password: 1qaz2wsx
-      type: com.alibaba.druid.pool.DruidDataSource
-      druid:
-         initial-size: 10
-         max-active: 100
-         min-idle: 10
-         max-wait: 60000
-         pool-prepared-statements: true
-         max-pool-prepared-statement-per-connection-size: 20
-         time-between-eviction-runs-millis: 60000
-         min-evictable-idle-time-millis: 300000
-         validation-query: SELECT 1 FROM DUAL
-         test-while-idle: true
-         test-on-borrow: false
-         test-on-return: false
+#      type: com.alibaba.druid.pool.DruidDataSource
+#      druid:
+#         initial-size: 10
+#         max-active: 100
+#         min-idle: 10
+#         max-wait: 60000
+#         pool-prepared-statements: true
+#         max-pool-prepared-statement-per-connection-size: 20
+#         time-between-eviction-runs-millis: 60000
+#         min-evictable-idle-time-millis: 300000
+#         validation-query: SELECT 1 FROM DUAL
+#         test-while-idle: true
+#         test-on-borrow: false
+#         test-on-return: false
 
 mybatis:
   type-aliases-package: com.lz.bean
